  empty that will be used instead of defaulting to value from context or
  web parameters
- Improved date/time and number parsing for String values passed to an
  entity, partly so that implicit entity-auto services are more usable
- Screen transition response plain URLs now assemble parameters using
  response parameter subelements

Bug Fixes:

- Fixed URLs for Mantle UBPL links using active screen URL as the default
  base URL instead of the full URL of the current screen
- Fixed issue where form-list-column and field-layout nodes in an extended
  screen modified the original node from the base screen
- Fixed issue in entity-auto create where automatically set fromDate was
  not returned in the service result
- Fixed issue in screens with a form-list and then a form-single where
  listEntryIndex bleeds over and results in a _?? to field IDs and such
- Fixed issue with date/time parsing and formatting to more consistently
  user user time zone, avoids time discrepancies between input and display
  while leaving hidden fields as plain toString/etc
- Fixed issue with date and time values going to and from the database when
  the current user has a time zone different from the system by passing a
  Calendar object with the user's time zone to the PreparedStatement and
  ResultSet methods for Date, Time, and Timestamp
- Fixed issue with automatic case insensitive order by on non-String
  fields; now ignored automatically when not applicable
- Fixed issue with hidden fields in form-list header-fields when rendered
  in HTML with the default macros where the title appeared even if all
  field types were hidden, and if @hide was set to true the hidden input
  would not be rendered
- Fixed issue in XML Form when a field-row is under a field-group element
  where the field-row was ignored and the fields in the group were
  displayed twice
- Fixed issue when making a condition with an empty Map, List, etc returns
  null instead of an invalid condition